add web-components keyword

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "cvitaede-circlepicture",
   "main": "cvitaede-circlepicture.html",
+  "keywords": "web-components",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0"
   },
